projects/raaga/sales/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sales
  name: sales-svc
  namespace: raaga-dev
spec:
  ports:
    - port: 8092
      protocol: TCP
      targetPort: 8092
  selector:
    app: sales
