projects/raaga/sales/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sales
  namespace: raaga-dev
  labels:
    app: sales
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  raaga-sales-dev.coherent.in
      secretName: sales-tls
  rules:
  - host: "raaga-sales-dev.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: sales-svc
            port: 
              number: 8092
